sync with master (3rd party files, jakarta uptake) (#9)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>