@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.glassfish.metro</groupId>
         <artifactId>metro-runtime</artifactId>
-        <version>2.4.1-SNAPSHOT</version>
+        <version>2.4.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>metro-runtime-impl</artifactId>
@@ -45,28 +45,6 @@
         </plugins>
     </build>
 
-   <profiles>
-        <profile>
-            <id>release-9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <build>
-              <plugins>
-                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <argLine>
-                           --add-modules java.activation
-                        </argLine>
-                    </configuration>
-                </plugin>
-              </plugins>
-             </build>
-        </profile>
-    </profiles>
-
     <dependencies>
         <!-- Compile scope -->
         <dependency>
@@ -78,12 +56,12 @@
             <artifactId>istack-commons-runtime</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.xml.bind</groupId>
-            <artifactId>jaxb-api</artifactId>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.xml.ws</groupId>
-            <artifactId>jaxws-api</artifactId>
+            <groupId>jakarta.xml.ws</groupId>
+            <artifactId>jakarta.xml.ws-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.ws</groupId>
@@ -94,8 +72,8 @@
             <artifactId>policy</artifactId>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
+            <groupId>jakarta.annotation</groupId>
+            <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.stream.buffer</groupId>
